--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -158,7 +158,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -172,7 +172,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -187,7 +187,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -217,7 +217,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -232,7 +232,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -246,7 +246,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -261,7 +261,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -291,7 +291,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -306,7 +306,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -320,7 +320,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -335,7 +335,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -365,7 +365,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -380,7 +380,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -394,7 +394,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -409,7 +409,7 @@
                         width="16"
                         height="16"
                       >
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -568,7 +568,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-media-icon" width="24" height="24">
-                  <use href="/images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -579,7 +579,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-media-icon" width="24" height="24">
-                  <use href="/images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -589,7 +589,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 ><svg class="footer-social-media-icon" width="24" height="24">
-                  <use href="/images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -600,7 +600,7 @@
                 target="_blank"
               >
                 <svg class="footer-social-media-icon" width="24" height="24">
-                  <use href="/images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
